refs/ps/testcases/A3/Testcases/Error/tc7.c
void main();

void main()
{
    strinnng operator;
    int num1, num2;
    int result = (operator == "+") num1+num2 : num1-num2;
    print result;
}